# soccer-physics-engine

./: .env.example  .gitignore  AGENTS.md  BUILD_PLAN.md  CODEX_PROMPTS.md  Dockerfile  Makefile  README.md  USER_GUIDE.md  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
assets/demo_screenshots/: README.md
configs/: aws.yaml  default.yaml  features.yaml  model.yaml
data/: README.md
frontend/: index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  styles.css
infra/: api-gateway.yaml  architecture.md  cloudwatch-alarms.yaml  ecs-task-definition.json
notebooks/: 09_baseline_model.ipynb  12_pose_prototype.ipynb
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  middleware.py  routes.py  schemas.py
src/evaluation/: __init__.py  case_studies.py  counterfactual_check.py  outcome_correlation.py  perturbation.py
src/graph/: __init__.py  build_graph.py  edge_features.py  node_features.py  nx_prototype.py  temporal_graph.py
tests/: conftest.py  test_api.py  test_config.py  test_evaluation.py  test_formation.py  test_graph_build.py  test_kinematics.py  test_load_metrics.py  test_metrica_loader.py  test_off_ball_runs.py  test_passing_lanes.py  test_phase_detector.py  test_pitch_control.py  test_pressing.py  test_recommendation.py  test_schemas.py  test_set_pieces.py  test_similarity.py  test_smoothing.py  test_spatial.py  test_state_scorer.py  test_tactical_phase3.py  test_team_shape.py  test_transitions.py  test_unified_reports.py
(+100 files in other folders)
